@@ -1,4 +1,5 @@
 - Refactor: Implement import and export operations for AcademicDebtGenerationRuleRestriction class and subclasses, in order to be able to migrate from other systems
+- Refactor: Set constructor and checkRules of AcademicDebtGenerationRuleRestriction and subclasses as public in order to migrate
 
 8.4.1 (30-06-2022)
 - Bug Fix: Fix the missing return from calculating the tariff when the academic service request has the cycle type
